Fixed menu on mobile

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -519,7 +519,7 @@ body {
 }
 
 /* Smartphones (landscape) ----------- */
-@media only screen and (min-width: 321px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (orientation: landscape) {
   .menu__container--list li > a {
     font-size: 2rem;
     margin: 0.5rem;
