--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -51,7 +51,9 @@
 
 /* Smartphones (landscape) ----------- */
 @media only screen 
-and (min-width : 321px) {
+and (min-device-width : 320px) 
+and (max-device-width : 568px) 
+and (orientation : landscape) {
   .menu__container--list li > a {
     font-size: 2rem;
     margin: 0.5rem;
